fixed horizontal scrollbar

--- a/less/typography.less
+++ b/less/typography.less
@@ -10,6 +10,10 @@ body, .is-inverted-dark {
 	font-family: @font-family;
 }
 
+.needs-scroll-bottom-offset.scroll-styled-h {
+	bottom: 0px;
+}
+
 .is-favorite .tweet-text a {
 	color: @favorite-color;    
 }
